rodatraden/static/rodatraden/rodatraden.css
/* ... */
/* Put the selected button at the top so that it covers the border and
 * integrates visually with the block schedule container. */
.profile-tab.selected {
  z-index: 2;
}

.profile-tab:not(.selected) {
  background-color: hsl(0, 0%, 95%);
}

/* Round of the outer edges so the tabs look more connected. */
.profile-tab:first-child {
  border-top-left-radius: 0.5rem;
}
.profile-tab:last-child {
  border-top-right-radius: 0.5rem;
}

/* Only show tabs when there are more than one. */
.profile-tab:first-child:last-child {
  display: none;
}

.profile-tab:not(:last-child) {
  border-right: 0;
}

.profile-block-schedule-container {
  /* Make sure the block schedule doesn't shrink. */
  width: 100%;

  border: 1px solid var(--border-color);
  border-radius: 0.5rem;
  /* Connect the border with the tabs. */
  border-top-left-radius: 0;
  border-top-right-radius: 0;
}

.block-schedule--profile {
  /* Give some space between the border and the schedule. Use a margin to
  benefit from collapsing margins. */
  margin: var(--schedule-margin);

  /* Shrink the schedule to fit the profile detail page */
  font-size: 0.8125rem;
}

/* Hide the first two academic years. */
.block-schedule--profile .academic-year:nth-child(-n + 2) {
  display: none;
}

/* Highlight the placeholder block in a distinct color */
.course--base-block {
  background-color: var(--gray);
  border-color: var(--gray-light);
}

/* Course list */
.course-list-filters {
  display: grid;
  grid-template-columns: repeat(auto-fit, minmax(14rem, 1fr));

  padding: 1rem;
  border-radius: 0.25rem;
  margin-block: 1rem;
  background-color: #ececec;
}

.course-list__header {
  display: flex;
  gap: 5rem;

  padding: 0.5rem;

  font-weight: bold;
}

.course-list__header > :first-child {
  justify-content: space-between;

  flex-grow: 1;
}

.header-section {
  display: flex;
}

.header-section__ects,
.header-section__level,
.header-section__category {
  display: none;
}

.courses {
  padding: 0;
  margin: 0;
  list-style: none;
}

.courses > * {
  display: flex;
  justify-content: space-between;

  padding: 0.5rem;
  border-block-start: 1px solid var(--border-color);
}

.courses__columns {
  display: flex;
  justify-content: end;
}

.courses__icon {
  display: flex;
  align-items: center;
}

.courses__extra {
  display: flex;
  gap: 0.25rem;

  padding: 0;
  margin: 0;
  list-style: none;
}

.courses__extra > * {
  display: initial;
}

.courses__columns .categories-column {
  flex-wrap: wrap;

  margin-top: 0.25rem;
}

.courses__columns .level-column {
  display: flex;
  align-items: center;
  justify-content: center;
}

.ects-row,
.level-row,
.category-row {
  display: none;
}

.ects-column {
  width: 4rem;
  margin-right: 5rem;

  text-align: end;
}

.level-column {
  width: 3.5rem;
  height: 1.5rem;
  margin-right: 5rem;
}

.categories-column {
  width: 6rem;
}

@media (width < 52rem) {
  .header-section__ects,
  .ects-row {
    display: inline-block;
  }

  .ects-column {
    display: none;
  }
}

@media (width < 46rem) {
  .header-section__level,
  .level-row {
    display: block;
  }

  .courses__columns .level-column,
  .level-column {
    display: none;
  }
}

@media (width < 40rem) {
  .header-section__category,
  .category-row {
    display: block;
  }

  .course-list__header > :last-child,
  .categories-column {
    display: none;
  }
}

/** SELECT2 */
.select2-results__option--highlighted {
  background-color: var(--main-color) !important;
}

.select2-results__options {
  font-size:small !important;
}

.select2-selection__rendered {
  font-size:small !important;
}

/* PAGINATION */
.pagination {
  justify-content: center;
  
  margin-top: 1rem;
}

.page-link {
  color: var(--main-color) !important;
}

.page-item.active .page-link {
  background-color: var(--main-color) !important;
  border-color: var(--main-color) !important;
  color: white !important;
}

.page-item--previous {
  margin-right: 0.5rem;
}

.page-item--next {
  margin-left: 0.5rem;
}

.page-ellipsis {
  display: block;
  padding: 0.5rem 0.5rem;
  line-height: 1.25;
}

@media (width < 650px) {
  .page-hidden-medium {
    display: none;
  }
}

@media (width < 500px) {
  .page-hidden-narrow {
    display: none;
  }
}

/* FORM CATEGORY */
.cat-select {
  width: 60%;
}

.cat-ects {
  width: 20%;
}

/* Fields for start year and week in private course form. */
.form-start-week {
  display: flex;
  flex-wrap: wrap;
}

.form-start-week > * {
  width: auto;
  flex-grow: 1;
}

.profile-detail-title {
  margin: 0;
  margin-bottom: 0.25rem;

  font-weight: bold;
}

/* Course list on profile page */
.profile-detail-list {
  padding: 0;
  margin: 0;
  margin-bottom: 1rem;

  list-style: none;
}

.profile-detail-list li {
  padding: 0.25rem;
  border-top: 1px solid var(--border-color);
}

.profile-detail-list a {
  margin-right: 0.5rem;
}

.profile-detail-schedules {
  display: inline-block;
}

